--- a/survey_question_type_binary/views/survey_question.xml
+++ b/survey_question_type_binary/views/survey_question.xml
@@ -11,25 +11,23 @@
         <field name="inherit_id" ref="survey.survey_question_form" />
         <field name="arch" type="xml">
             <xpath expr="//sheet/group[2]/group[2]/div" position="inside">
-                <div
-                    attrs="{'invisible': [('question_type', 'not in',('binary','multi_binary'))]}"
-                >
+                <div invisible="question_type not in ('binary','multi_binary')">
                     <i class="fa fa-upload fa-2x" title="upload" /> Upload binary
                 </div>
             </xpath>
             <xpath expr="//field[@name='validation_email']/../.." position="attributes">
-                <attribute name="attrs">
-                {'invisible': [('question_type', 'not in', ['char_box', 'numerical_box', 'date', 'datetime', "binary", "multi_binary"])]}</attribute>
+                <attribute name="invisible">
+                question_type not in ['char_box', 'numerical_box', 'date', 'datetime', "binary", "multi_binary"]</attribute>
             </xpath>
 
             <xpath expr="//field[@name='validation_length_min']" position="before">
                 <field
                     name="allowed_filemimetypes"
-                    attrs="{'invisible': [('question_type','not in',('binary','multi_binary'))]}"
+                    invisible="question_type not in ('binary','multi_binary')"
                 />
                 <field
                     name="max_filesize"
-                    attrs="{'invisible': [('question_type','not in',('binary','multi_binary'))]}"
+                    invisible="question_type not in ('binary','multi_binary')"
                 />
             </xpath>
         </field>
