--- a/survey_sale_generation/views/survey_question_views.xml
+++ b/survey_sale_generation/views/survey_question_views.xml
@@ -27,6 +27,10 @@
                     attrs="{'column_invisible': [('parent.question_type', '=', 'matrix')]}"
                     widget="many2many_tags"
                 />
+                <field
+                    name="sale_order_template_id"
+                    attrs="{'column_invisible': [('parent.question_type', '!=', 'simple_choice')]}"
+                />
             </xpath>
             <xpath expr="//field[@name='comments_allowed']/.." position="after">
                 <group name="sales" string="Sales">
